...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pin"
        app:tint="@color/material_on_background_emphasis_medium" />

    <TextView
        android:id="@+id/buildStatus"
        style="@style/ItemTitle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/buildNumber"
        app:layout_constraintTop_toBottomOf="@id/buildNumber"
        tools:text="Very long build status Very long build status Very long build status Very long build status" />

    <TextView
        android:id="@+id/branchName"
        style="@style/ItemSubTitle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
...
