<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2026 Andrey Tolpeev

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="build_running">Running</string>
    <string name="build_queued">Queued</string>
    <string name="build_failed">Failed</string>
    <string name="build_success">Success</string>
    <string name="build_error">Error</string>
    <string name="build_unknown">Unknown</string>
    <string name="build_personal">Personal build</string>
    <string name="build_pinned">Pinned build</string>
    <string name="build_queued_fallback">Queued build</string>
    <string name="build_no_number">No number</string>
    <string name="build_number">#%1$s</string>
</resources>
